src/test/resources/error/queryReturningInterfaceCollection/schema.graphqls
interface Node {
  id: ID!
}

type ProgramStudierett implements Node @node(table : "STUDIERETT") {
  id: ID!
}

type Query {
  nodes(ids: [ID!]): [Node]
}
